--- a/AsieCAD/AsieCAD.vcxproj.filters
+++ b/AsieCAD/AsieCAD.vcxproj.filters
@@ -60,6 +60,9 @@
     <ClCompile Include="point.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="cursor.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="camera.h">
@@ -110,12 +113,18 @@
     <ClInclude Include="point.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="cursor.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="shaders\torus.frag">
       <Filter>Source Files\Shaders</Filter>
     </None>
     <None Include="shaders\torus.vert">
+      <Filter>Source Files\Shaders</Filter>
+    </None>
+    <None Include="shaders\point.vert">
       <Filter>Source Files\Shaders</Filter>
     </None>
   </ItemGroup>
