--- a/AsieCAD/AsieCAD.vcxproj
+++ b/AsieCAD/AsieCAD.vcxproj
@@ -144,6 +144,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="app.cpp" />
+    <ClCompile Include="bezierCurve.cpp" />
     <ClCompile Include="cursor.cpp" />
     <ClCompile Include="glad.c" />
     <ClCompile Include="Imgui\imgui.cpp" />
@@ -160,6 +161,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="app.h" />
+    <ClInclude Include="bezierCurve.h" />
     <ClInclude Include="camera.h" />
     <ClInclude Include="clickable.h" />
     <ClInclude Include="cursor.h" />
