Bezier's C2 curves works

--- a/AsieCAD/AsieCAD.vcxproj
+++ b/AsieCAD/AsieCAD.vcxproj
@@ -145,6 +145,7 @@
   <ItemGroup>
     <ClCompile Include="app.cpp" />
     <ClCompile Include="BezierC0.cpp" />
+    <ClCompile Include="bezierC2.cpp" />
     <ClCompile Include="cursor.cpp" />
     <ClCompile Include="curve.cpp" />
     <ClCompile Include="glad.c" />
@@ -163,6 +164,7 @@
   <ItemGroup>
     <ClInclude Include="app.h" />
     <ClInclude Include="BezierC0.h" />
+    <ClInclude Include="bezierC2.h" />
     <ClInclude Include="camera.h" />
     <ClInclude Include="clickable.h" />
     <ClInclude Include="cursor.h" />
