Added cubic interpolating splines and deleted deprecated bezier C2 curves

--- a/AsieCAD/AsieCAD.vcxproj
+++ b/AsieCAD/AsieCAD.vcxproj
@@ -145,8 +145,8 @@
   <ItemGroup>
     <ClCompile Include="app.cpp" />
     <ClCompile Include="BezierC0.cpp" />
-    <ClCompile Include="bezierC2.cpp" />
     <ClCompile Include="bSpline.cpp" />
+    <ClCompile Include="cubicInterpolated.cpp" />
     <ClCompile Include="cursor.cpp" />
     <ClCompile Include="curve.cpp" />
     <ClCompile Include="glad.c" />
@@ -165,10 +165,10 @@
   <ItemGroup>
     <ClInclude Include="app.h" />
     <ClInclude Include="BezierC0.h" />
-    <ClInclude Include="bezierC2.h" />
     <ClInclude Include="bSpline.h" />
     <ClInclude Include="camera.h" />
     <ClInclude Include="clickable.h" />
+    <ClInclude Include="cubicInterpolated.h" />
     <ClInclude Include="cursor.h" />
     <ClInclude Include="curve.h" />
     <ClInclude Include="Imgui\imconfig.h" />
