--- a/AsieCAD/AsieCAD.vcxproj
+++ b/AsieCAD/AsieCAD.vcxproj
@@ -165,6 +165,7 @@
     <ClCompile Include="point.cpp" />
     <ClCompile Include="pointObject.cpp" />
     <ClCompile Include="sceneObject.cpp" />
+    <ClCompile Include="tinyxml2\tinyfiledialogs.c" />
     <ClCompile Include="tinyxml2\tinyxml2.cpp" />
     <ClCompile Include="toolXML.cpp" />
     <ClCompile Include="torus.cpp" />
@@ -197,6 +198,7 @@
     <ClInclude Include="position.h" />
     <ClInclude Include="sceneObject.h" />
     <ClInclude Include="shader_s.h" />
+    <ClInclude Include="tinyxml2\tinyfiledialogs.h" />
     <ClInclude Include="tinyxml2\tinyxml2.h" />
     <ClInclude Include="toolXML.h" />
     <ClInclude Include="torus.h" />
