Gregory Patches mesh rendering almost working

--- a/AsieCAD/AsieCAD.vcxproj
+++ b/AsieCAD/AsieCAD.vcxproj
@@ -152,6 +152,7 @@
     <ClCompile Include="curve.cpp" />
     <ClCompile Include="framebuffers.cpp" />
     <ClCompile Include="glad.c" />
+    <ClCompile Include="gregoryPatch.cpp" />
     <ClCompile Include="Imgui\imgui.cpp" />
     <ClCompile Include="Imgui\imgui_demo.cpp" />
     <ClCompile Include="Imgui\imgui_draw.cpp" />
@@ -182,6 +183,7 @@
     <ClInclude Include="cursor.h" />
     <ClInclude Include="curve.h" />
     <ClInclude Include="framebuffers.h" />
+    <ClInclude Include="gregoryPatch.h" />
     <ClInclude Include="Imgui\imconfig.h" />
     <ClInclude Include="Imgui\imgui.h" />
     <ClInclude Include="Imgui\imgui_impl_glfw.h" />
