--- a/AsieCAD/AsieCAD.vcxproj.filters
+++ b/AsieCAD/AsieCAD.vcxproj.filters
@@ -241,5 +241,8 @@
     <None Include="shaders\splinePatch.geom">
       <Filter>Source Files\Shaders</Filter>
     </None>
+    <None Include="shaders\gregoryPatch.geom">
+      <Filter>Source Files\Shaders</Filter>
+    </None>
   </ItemGroup>
 </Project>
