--- a/AsieCAD/AsieCAD.vcxproj
+++ b/AsieCAD/AsieCAD.vcxproj
@@ -159,6 +159,7 @@
     <ClCompile Include="Imgui\imgui_impl_glfw.cpp" />
     <ClCompile Include="Imgui\imgui_impl_opengl3.cpp" />
     <ClCompile Include="Imgui\imgui_widgets.cpp" />
+    <ClCompile Include="intersectionCurve.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="meshBuffer.cpp" />
     <ClCompile Include="splinePatch.cpp" />
@@ -193,6 +194,7 @@
     <ClInclude Include="Imgui\imstb_rectpack.h" />
     <ClInclude Include="Imgui\imstb_textedit.h" />
     <ClInclude Include="Imgui\imstb_truetype.h" />
+    <ClInclude Include="intersectionCurve.h" />
     <ClInclude Include="meshBuffer.h" />
     <ClInclude Include="splinePatch.h" />
     <ClInclude Include="pointSurface.h" />
