--- a/AsieCAD/imgui.ini
+++ b/AsieCAD/imgui.ini
@@ -4,7 +4,7 @@ Size=400,400
 Collapsed=0
 
 [Window][Settings Window]
-Pos=8,6
+Pos=8,7
 Size=390,525
 Collapsed=0
 
@@ -19,7 +19,17 @@ Size=500,440
 Collapsed=0
 
 [Window][Properties]
-Pos=5,550
+Pos=7,541
 Size=306,401
+Collapsed=0
+
+[Window][ImPlot Demo]
+Pos=50,50
+Size=530,750
+Collapsed=0
+
+[Window][Intersection plot]
+Pos=1334,35
+Size=456,676
 Collapsed=0
 
