--- a/AsieCAD/imgui.ini
+++ b/AsieCAD/imgui.ini
@@ -19,7 +19,7 @@ Size=500,440
 Collapsed=0
 
 [Window][Properties]
-Pos=6,537
+Pos=18,545
 Size=306,401
 Collapsed=0
 
@@ -31,5 +31,10 @@ Collapsed=0
 [Window][Intersection plot]
 Pos=1334,35
 Size=456,671
+Collapsed=0
+
+[Window][Information]
+Pos=805,429
+Size=194,91
 Collapsed=0
 
