Most simple trimming is working

--- a/AsieCAD/AsieCAD.vcxproj
+++ b/AsieCAD/AsieCAD.vcxproj
@@ -217,6 +217,7 @@
     <None Include="shaders\bezier.geom" />
     <None Include="shaders\bezierPatch.geom" />
     <None Include="shaders\gregoryPatch.geom" />
+    <None Include="shaders\patch.frag" />
     <None Include="shaders\patch.vert" />
     <None Include="shaders\frame.frag" />
     <None Include="shaders\frame.vert" />
