--- a/AsieCAD/AsieCAD.vcxproj.filters
+++ b/AsieCAD/AsieCAD.vcxproj.filters
@@ -271,5 +271,8 @@
     <None Include="shaders\torusTrim.vert">
       <Filter>Source Files\Shaders</Filter>
     </None>
+    <None Include="shaders\trim.frag">
+      <Filter>Source Files\Shaders</Filter>
+    </None>
   </ItemGroup>
 </Project>
