--- a/AsieCAD/AsieCAD.vcxproj.filters
+++ b/AsieCAD/AsieCAD.vcxproj.filters
@@ -123,6 +123,12 @@
     <ClCompile Include="Imgui\implot_demo.cpp">
       <Filter>Source Files\Imgui</Filter>
     </ClCompile>
+    <ClCompile Include="woodBlock.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="milling.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="camera.h">
@@ -230,6 +236,12 @@
     <ClInclude Include="Imgui\implot.h">
       <Filter>Source Files\Imgui</Filter>
     </ClInclude>
+    <ClInclude Include="woodBlock.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="milling.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="shaders\torus.frag">
@@ -266,6 +278,18 @@
       <Filter>Source Files\Shaders</Filter>
     </None>
     <None Include="shaders\trim.frag">
+      <Filter>Source Files\Shaders</Filter>
+    </None>
+    <None Include="shaders\phong.frag">
+      <Filter>Source Files\Shaders</Filter>
+    </None>
+    <None Include="shaders\wood.geom">
+      <Filter>Source Files\Shaders</Filter>
+    </None>
+    <None Include="shaders\wood.vert">
+      <Filter>Source Files\Shaders</Filter>
+    </None>
+    <None Include="shaders\milling.vert">
       <Filter>Source Files\Shaders</Filter>
     </None>
   </ItemGroup>
