--- a/AsieCAD/imgui.ini
+++ b/AsieCAD/imgui.ini
@@ -4,7 +4,7 @@ Size=400,400
 Collapsed=0
 
 [Window][Settings Window]
-Pos=5,26
+Pos=11,27
 Size=390,525
 Collapsed=0
 
@@ -36,5 +36,10 @@ Collapsed=0
 [Window][Information]
 Pos=805,429
 Size=236,135
+Collapsed=0
+
+[Window][Error]
+Pos=806,380
+Size=320,117
 Collapsed=0
 
