--- a/AsieCAD/AsieCAD.vcxproj.filters
+++ b/AsieCAD/AsieCAD.vcxproj.filters
@@ -242,6 +242,9 @@
     <ClInclude Include="milling.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="stb_image.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="shaders\torus.frag">
