Alpha version of first paths generation works

--- a/AsieCAD/AsieCAD.vcxproj.filters
+++ b/AsieCAD/AsieCAD.vcxproj.filters
@@ -129,6 +129,9 @@
     <ClCompile Include="milling.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="pathGenerator.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="camera.h">
@@ -243,6 +246,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="stb_image.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="pathGenerator.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
