--- a/AsieCAD/AsieCAD.vcxproj
+++ b/AsieCAD/AsieCAD.vcxproj
@@ -165,6 +165,7 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="meshBuffer.cpp" />
     <ClCompile Include="milling.cpp" />
+    <ClCompile Include="pathGenerator.cpp" />
     <ClCompile Include="splinePatch.cpp" />
     <ClCompile Include="pointSurface.cpp" />
     <ClCompile Include="point.cpp" />
@@ -202,6 +203,7 @@
     <ClInclude Include="intersectionCurve.h" />
     <ClInclude Include="meshBuffer.h" />
     <ClInclude Include="milling.h" />
+    <ClInclude Include="pathGenerator.h" />
     <ClInclude Include="splinePatch.h" />
     <ClInclude Include="pointSurface.h" />
     <ClInclude Include="point.h" />
