--- a/AsieCAD/AsieCAD.vcxproj
+++ b/AsieCAD/AsieCAD.vcxproj
@@ -200,7 +200,7 @@
     <ClInclude Include="Imgui\imstb_rectpack.h" />
     <ClInclude Include="Imgui\imstb_textedit.h" />
     <ClInclude Include="Imgui\imstb_truetype.h" />
-    <ClInclude Include="inboxSurface.h" />
+    <ClInclude Include="OffsetSurface.h" />
     <ClInclude Include="intersectionCurve.h" />
     <ClInclude Include="meshBuffer.h" />
     <ClInclude Include="milling.h" />
